[tool.poetry]
name = "lost-and-found-backend"
version = "0.1.0"
description = ""
authors = ["Aayush2492 <aayushpatel2402@gmail.com>"]
readme = "README.md"
packages = [{include = "lost_and_found_backend"}]
[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.92.0"
uvicorn = "^0.20.0"
python-dotenv = "^0.21.1"
psycopg2-binary = "^2.9.5"
google-api-python-client = "^2.78.0"
aiosql = "^7.2"
google-auth-oauthlib = "^1.0.0"
aiohttp = "^3.8.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
